# CampusTalentInsight

./: .dockerignore  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  deploy.ps1  deploy.sh  docker-compose.yml  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  pytest.ini  start.bat  start.ps1  tailwind.config.js
config/: password.txt
reports/: 校园招聘分析报告_20250611_211105.html  校园招聘分析报告_20250612_085700.html  校园招聘分析报告_20250612_123557.html  校园招聘分析报告_20250612_124626.html  校园招聘分析报告_20250612_125326.html  校园招聘分析报告_20250612_125642.html  校园招聘分析报告_20250612_130243.html  校园招聘分析报告_20250612_130420.html  校园招聘分析报告_20250612_130754.html  校园招聘分析报告_20250612_133755.html  校园招聘分析报告_20250612_154232.html  校园招聘分析报告_20250612_154447.html  校园招聘分析报告_20250612_154729.html  校园招聘分析报告_20250612_175707.html  校园招聘分析报告_20250612_175819.html  校园招聘分析报告_20250612_182615.html  校园招聘分析报告_20250613_145117.html  校园招聘分析报告_20250613_151319.html
scripts/: deploy.py  quality_check.py
src/: input.css
src/api/: routes.py
src/core/: app.py  auth_middleware.py  config.py  data_processor.py  middleware.py
src/utils/: __init__.py  file_manager.py  logger.py  pdf_converter.py  report_generator.py
static/: index.html  tailwind.min.css
tests/: __init__.py  test_api.py  test_config.py  test_data_processor.py  test_integration.py  test_report_generator.py
uploads/: .gitkeep
